# sorry-im-off-today

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  README.md
src/: calendar.rs  main.rs  slack.rs
