[package]
name = "sorry-im-off-today"
version = "1.0.2"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2018"
description = "Automatically update your Slack status if your Google Calendar says that you are off today"
repository = "https://gitlab.com/dsferruzza/sorry-im-off-today"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["google-calendar", "slack"]
license = "MIT"

[badges]
gitlab = { repository = "dsferruzza/sorry-im-off-today", branch = "master" }

[dependencies]
chrono = "0.4"
ical = { version = "0.6.*", default-features = false, features = ["ical"] }
regex = "1.3"
reqwest = "0.10"
slack_api = "0.22"
serde_json = "1.0"
