[package]
name = "sorry-im-off-today"
version = "1.0.3"
authors = ["David Sferruzza <david.sferruzza@gmail.com>"]
edition = "2021"
description = "Automatically update your Slack status if your Google Calendar says that you are off today"
repository = "https://gitlab.com/dsferruzza/sorry-im-off-today"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["google-calendar", "slack"]
license = "MIT"

[badges]
gitlab = { repository = "dsferruzza/sorry-im-off-today", branch = "master" }

[dependencies]
chrono = "0.4.19"
ical = { version = "0.7.0", default-features = false, features = ["ical"] }
regex = "1.5.6"
reqwest = { version = "0.10.10", default-features = false, features = ["rustls-tls", "trust-dns", "blocking"] }
slack_api = { version = "0.23.1", default-features = false, features = ["reqwest_blocking", "with_rustls"] }
serde_json = "1.0.81"
